--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Chats l Kakao Clone</title>
+    <title>Chats</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -38,10 +38,28 @@
           <i class="far fa-comment"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html"><i class="fas fa-cog"></i></a>
         </span>
       </div>
     </header>
+
+    <main class="chats">
+      <ul class="chats__list">
+        <li class="chats__chat chat">
+          <div class="chat__column">
+            avater
+            <div class="chat__content">
+              <span class="chat__username">Lynn</span>
+              <span class="chat__preview">Going home</span>
+            </div>
+          </div>
+          <div class="chat__column">
+            <span class="chat__timestamp">Yesterday</span>
+          </div>
+        </li>
+      </ul>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
