--- a/find.html
+++ b/find.html
@@ -36,10 +36,7 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
-          <i class="far fa-comment"></i>
-        </span>
-        <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html"><i class="fas fa-cog"></i></a>
         </span>
       </div>
     </header>
