--- a/more.html
+++ b/more.html
@@ -36,10 +36,10 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
-          <i class="far fa-comment"></i>
+          <i class="fas fa-qrcode"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html"><i class="fas fa-cog"></i></a>
         </span>
       </div>
     </header>
