--- a/friends.html
+++ b/friends.html
@@ -40,6 +40,71 @@
         </span>
       </div>
     </header>
+    <main class="friends">
+      <header class="friends__header">
+        <div class="friends__friend friend friend--lg ">
+          <div class="friend__column">
+            <img src="images/me.jpg" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Sophia
+              </span>
+              <span class="friend__status">
+                Just Smile
+              </span>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="friends__plus">
+        <h5 class="friends__title">Plus friend</h5>
+        <div class="friends__friend friend">
+          <div class="friend__column">
+            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Plus Friend
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <ul class="friends__list">
+        <h5 class="friends__title">Friends 14</h5>
+        <li class="friends__friend friend">
+          <div class="friend__column">
+            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Lynn
+              </span>
+              <span class="friend__status">
+                Nomad Coders yah!!
+              </span>
+            </div>
+          </div>
+        </li>
+        <li class="friends__friend friend">
+          <div class="friend__column">
+            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Lynn
+              </span>
+              <span class="friend__status">
+                Nomad Coders yah!!
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__now-listening">
+              <span>지독하게 - FTISLAND</span>
+              <i class="fas fa-play"></i>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
