--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <ul class="chats__list">
         <li class="chats__chat chat">
           <div class="chat__column">
-            <img src="images/avatar.jpg" class="chat__avatar" />
+            <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
             <div class="chat__content">
               <span class="chat__username">Lynn</span>
               <span class="chat__preview">Going home</span>
