--- a/more.html
+++ b/more.html
@@ -43,6 +43,69 @@
         </span>
       </div>
     </header>
+    <main class="more">
+      <header class="more__header">
+        <div class="more__friend friend friend--lg ">
+          <div class="friend__column">
+            <img src="images/me.jpg" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Sophia
+              </span>
+              <span class="friend__status">
+                sophia@sophiamail.com
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <i class="far fa-comment-alt fa-2x"></i>
+          </div>
+        </div>
+        <ul class="more__btn-list">
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="far fa-smile-wink fa-2x"></i>
+            </span>
+            <span class="more__btn-title">Emoticons</span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="fas fa-brush fa-2x"></i>
+            </span>
+            <span class="more__btn-title">Themes</span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="fas fa-code-branch fa-2x"></i>
+            </span>
+            <span class="more__btn-title">Account</span>
+          </li>
+        </ul>
+      </header>
+      <section class="more__suggestions">
+        <h5 class="more__title">Suggestions</h5>
+        <ul class="more__suggestions-list">
+          <li class="more__suggestion suggestion">
+            <span class="suggestions__icon">
+              <i class="fas fa-quote-right"></i>
+            </span>
+            <span class="suggestion__title">Kakao Story</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestions__icon">
+              <i class="far fa-meh-blank"></i>
+            </span>
+            <span class="suggestion__title">Kakao Friends</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestions__icon">
+              <i class="fas fa-dice"></i>
+            </span>
+            <span class="suggestion__title">Friends Gem</span>
+          </li>
+        </ul>
+      </section>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
