--- a/settings.html
+++ b/settings.html
@@ -29,9 +29,9 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <span class="header__icon">
-          <i class="fas fa-arrow-left"></i>
-        </span>
+        <a href="more.html" class="header__back-btn">
+          <i class="fas fa-arrow-left fa-2x"></i>
+        </a>
         <h1 class="header__title">Settings</h1>
       </div>
       <div class="header__header-column">
@@ -40,5 +40,88 @@
         </span>
       </div>
     </header>
+    <main class="settings">
+      <header class="settings__main-header">
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-bullhorn"></i>
+            </span>
+            <span class="settings__title">Notices</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-flask"></i>
+            </span>
+            <span class="settings__title">Kakao Lab</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-info-circle"></i>
+            </span>
+            <span class="settings__title">Version</span>
+            <span class="settings__version">8.2.7</span>
+          </li>
+        </ul>
+      </header>
+      <section class="settings__sections">
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-lock"></i>
+            </span>
+            <span class="settings__title">Privacy</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-bell"></i>
+            </span>
+            <span class="settings__title">Notifications</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-user"></i>
+            </span>
+            <span class="settings__title">Friends</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-comment"></i>
+            </span>
+            <span class="settings__title">Chats</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-comment-dots"></i>
+            </span>
+            <span class="settings__title">SMS Messages</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-adjust"></i>
+            </span>
+            <span class="settings__title">Display</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-palette"></i>
+            </span>
+            <span class="settings__title">Themes</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-vials"></i>
+            </span>
+            <span class="settings__title">Advanced</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-question-circle"></i>
+            </span>
+            <span class="settings__title">Support</span>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
