--- a/friends.html
+++ b/friends.html
@@ -42,7 +42,7 @@
       </div>
     </header>
     <main class="friends">
-      <header class="friends__header">
+      <header class="friends__header friend">
         <div class="friends__friend friend friend--lg ">
           <div class="friend__column">
             <img src="images/me.jpg" class="g-avatar friend__avatar" />
@@ -58,7 +58,12 @@
         </div>
       </header>
       <div class="friends__plus">
-        <h5 class="friends__title">Plus friend</h5>
+        <div class="friends__title-column">
+          <h5 class="friends__title">Plus friend</h5>
+          <div class="friends__title-icon">
+            <i class="fas fa-angle-up"></i>
+          </div>
+        </div>
         <div class="friends__friend friend">
           <div class="friend__column">
             <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
@@ -71,7 +76,12 @@
         </div>
       </div>
       <ul class="friends__list">
-        <h5 class="friends__title">Friends 14</h5>
+        <div class="friends__title-column">
+          <h5 class="friends__title">Friends 14</h5>
+          <div class="friends__title-icon">
+            <i class="fas fa-angle-up"></i>
+          </div>
+        </div>
         <li class="friends__friend friend">
           <div class="friend__column">
             <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
@@ -90,10 +100,10 @@
             <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
-                Lynn
+                Saea
               </span>
               <span class="friend__status">
-                Nomad Coders yah!!
+                Cocoa clone yah!!
               </span>
             </div>
           </div>
@@ -115,6 +125,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
