--- a/index.html
+++ b/index.html
@@ -46,16 +46,20 @@
 
     <main class="chats">
       <ul class="chats__list">
-        <li class="chats__chat chat">
+        <li class="chats__chat friend">
           <a href="chat.html">
-            <div class="chat__column">
-              <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
-              <div class="chat__content">
-                <span class="chat__username">Lynn</span>
-                <span class="chat__preview">Going home</span>
+            <div class="friend__column">
+              <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+              <div class="friend__content">
+                <span class="friend__name">
+                  Lynn
+                </span>
+                <span class="friend__bottom-text">
+                  It's so gooood!
+                </span>
               </div>
             </div>
-            <div class="chat__column">
+            <div class="friend__column">
               <span class="chat__timestamp">Yesterday</span>
             </div>
           </a>
