--- a/find.html
+++ b/find.html
@@ -79,10 +79,14 @@
         </ul>
       </header>
       <ul class="find__recommend">
-        <h5 class="friends__title">Recommended Friends</h5>
+        <div class="friends__plus-find">
+          <div class="friends__title-column">
+            <h5 class="friends__title">Recommended Friends</h5>
+          </div>
+        </div>
         <li class="find__friend friend">
           <div class="friend__column">
-            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Lynn
@@ -97,7 +101,7 @@
         </li>
         <li class="find__friend friend">
           <div class="friend__column">
-            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Lynn
