--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a href="chat.html">
           <li class="chats__chat friend">
             <div class="friend__column ">
-              <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+              <img class="friend__avatar m-avatar" src="images/avatar.jpg" />
               <div class="friend__content">
                 <span class="friend__name">
                   Lynn
