--- a/friends.html
+++ b/friends.html
@@ -42,7 +42,7 @@
       </div>
     </header>
     <main class="friends">
-      <header class="friends__header friend">
+      <header class="friends__header">
         <div class="friends__friend friend friend--lg ">
           <div class="friend__column">
             <img src="images/me.jpg" class="g-avatar friend__avatar" />
@@ -50,7 +50,7 @@
               <span class="friend__name">
                 Sophia
               </span>
-              <span class="friend__status">
+              <span class="friend__bottom friend__status">
                 Just Smile
               </span>
             </div>
@@ -66,7 +66,7 @@
         </div>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -84,12 +84,12 @@
         </div>
         <li class="friends__friend friend">
           <div class="friend__column">
-            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Lynn
               </span>
-              <span class="friend__status">
+              <span class="friend__bottom friend__status">
                 Nomad Coders yah!!
               </span>
             </div>
@@ -97,12 +97,12 @@
         </li>
         <li class="friends__friend friend">
           <div class="friend__column">
-            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Saea
               </span>
-              <span class="friend__status">
+              <span class="friend__bottom friend__status">
                 Cocoa clone yah!!
               </span>
             </div>
