friends is done
friends is done.
next time 'now listening' will have a neon effect

--- a/friends.html
+++ b/friends.html
@@ -109,7 +109,7 @@
           </div>
           <div class="friend__column">
             <div class="friend__now-listening">
-              <span>지독하게 - FTISLAND</span>
+              <span>HONGGI-FTISLAND</span>
               <i class="fas fa-play"></i>
             </div>
           </div>
