--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <span class="friend__name">
                   Lynn
                 </span>
-                <span class="friend__bottom-text">
+                <span class="friend__bottom friend__bottom-text">
                   It's so gooood!
                 </span>
               </div>
