--- a/find.html
+++ b/find.html
@@ -44,33 +44,33 @@
     <main class="find">
       <header class="find__header">
         <ul class="find__header-list">
-          <li class="fint__header-btn header-btn">
+          <li class="find__header-btn">
             <span class="header-btn__icon">
-              <i class="fas fa-qrcode fa-2x"></i>
+              <i class="fas fa-qrcode"></i>
             </span>
             <span class="header-btn__title">
               QR Code
             </span>
           </li>
-          <li class="fint__header-btn header-btn">
+          <li class="find__header-btn">
             <span class="header-btn__icon">
-              <i class="far fa-address-book fa-2x"></i>
+              <i class="far fa-address-book"></i>
             </span>
             <span class="header-btn__title">
               Add by Contacts
             </span>
           </li>
-          <li class="fint__header-btn header-btn">
+          <li class="find__header-btn">
             <span class="header-btn__icon">
-              <i class="fas fa-passport fa-2x"></i>
+              <i class="fas fa-passport"></i>
             </span>
             <span class="header-btn__title">
               Add by ID
             </span>
           </li>
-          <li class="fint__header-btn header-btn">
+          <li class="find__header-btn">
             <span class="header-btn__icon">
-              <i class="far fa-envelope fa-2x"></i>
+              <i class="far fa-envelope"></i>
             </span>
             <span class="header-btn__title">
               Invite
