--- a/more.html
+++ b/more.html
@@ -53,31 +53,31 @@
               <span class="friend__name">
                 Sophia
               </span>
-              <span class="friend__status">
+              <span class="friend__bottom friend__status">
                 sophia@sophiamail.com
               </span>
             </div>
           </div>
-          <div class="friend__column">
+          <div class="friend__column more__btn-icon">
             <i class="far fa-comment-alt fa-2x"></i>
           </div>
         </div>
         <ul class="more__btn-list">
           <li class="more__btn">
             <span class="more__btn-icon">
-              <i class="far fa-smile-wink fa-2x"></i>
+              <i class="far fa-smile-wink "></i>
             </span>
             <span class="more__btn-title">Emoticons</span>
           </li>
           <li class="more__btn">
             <span class="more__btn-icon">
-              <i class="fas fa-brush fa-2x"></i>
+              <i class="fas fa-brush "></i>
             </span>
             <span class="more__btn-title">Themes</span>
           </li>
           <li class="more__btn">
             <span class="more__btn-icon">
-              <i class="fas fa-code-branch fa-2x"></i>
+              <i class="fas fa-code-branch "></i>
             </span>
             <span class="more__btn-title">Account</span>
           </li>
