--- a/more.html
+++ b/more.html
@@ -87,22 +87,22 @@
         <h5 class="more__title">Suggestions</h5>
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestion">
-            <span class="suggestions__icon">
+            <div class="suggestions__icon">
               <i class="fas fa-quote-right"></i>
-            </span>
-            <span class="suggestion__title">Kakao Story</span>
+            </div>
+            <div class="suggestion__title">Kakao Story</div>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestions__icon">
+            <div class="suggestions__icon">
               <i class="far fa-meh-blank"></i>
-            </span>
-            <span class="suggestion__title">Kakao Friends</span>
+            </div>
+            <div class="suggestion__title">Kakao Friends</div>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestions__icon">
+            <div class="suggestions__icon">
               <i class="fas fa-dice"></i>
-            </span>
-            <span class="suggestion__title">Friends Gem</span>
+            </div>
+            <div class="suggestion__title">Friends Gem</div>
           </li>
         </ul>
       </section>
