setting is done.

--- a/settings.html
+++ b/settings.html
@@ -110,11 +110,11 @@
           </li>
           <li class="settings__setting">
             <span class="settings__icon">
-              <i class="fas fa-vials"></i>
+              <i class="fas fa-ellipsis-h"></i>
             </span>
             <span class="settings__title">Advanced</span>
           </li>
-          <li class="settings__setting">
+          <li class="settings__setting last">
             <span class="settings__icon">
               <i class="far fa-question-circle"></i>
             </span>
