chat - write section is done

--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
+  <body class="chats-body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">12:53</span>
