--- a/chat.html
+++ b/chat.html
@@ -54,10 +54,10 @@
             <span class="message__author">Lynn</span>
             <span class="message__bubble">Hello! Nice to meet you!</span>
           </div>
-          <span class="message__timestemp"></span>
+          <div class="message__timestamp">5:20</div>
         </li>
-        <li class="incoming-message message">
-          <span class="message__timestemp"></span>
+        <li class="sent-message">
+          <span class="message__timestamp">6:17</span>
           <div class="message__content">
             <span class="message__bubble"
               >Hello! Nice to meet you too Lynn!</span
@@ -70,7 +70,7 @@
             <span class="message__author">Lynn</span>
             <span class="message__bubble">I'm in HongKong!</span>
           </div>
-          <span class="message__timestemp"></span>
+          <span class="message__timestamp">7:02</span>
         </li>
       </ul>
     </main>
