fade animation / Media Quary
fade animation is done.

--- a/settings.html
+++ b/settings.html
@@ -123,5 +123,10 @@
         </ul>
       </section>
     </main>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen is small
+      </span>
+    </div>
   </body>
 </html>
