--- a/chat.html
+++ b/chat.html
@@ -96,5 +96,10 @@
         </span>
       </div>
     </div>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen is small
+      </span>
+    </div>
   </body>
 </html>
