--- a/find.html
+++ b/find.html
@@ -141,5 +141,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen is small
+      </span>
+    </div>
   </body>
 </html>
