--- a/index.html
+++ b/index.html
@@ -92,5 +92,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen is small
+      </span>
+    </div>
   </body>
 </html>
