--- a/settings.html
+++ b/settings.html
@@ -125,7 +125,7 @@
     </main>
     <div class="bigScreen">
       <span class="bigScreen__text">
-        Please make your screen is small
+        ▶Please make your screen is small◀
       </span>
     </div>
   </body>
