--- a/chat.html
+++ b/chat.html
@@ -98,7 +98,7 @@
     </div>
     <div class="bigScreen">
       <span class="bigScreen__text">
-        Please make your screen is small
+        ▶Please make your screen is small◀
       </span>
     </div>
   </body>
