--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </nav>
     <div class="bigScreen">
       <span class="bigScreen__text">
-        Please make your screen is small
+        ▶Please make your screen is small◀
       </span>
     </div>
   </body>
