--- a/more.html
+++ b/more.html
@@ -134,7 +134,7 @@
     </nav>
     <div class="bigScreen">
       <span class="bigScreen__text">
-        Please make your screen is small
+        ▶Please make your screen is small◀
       </span>
     </div>
   </body>
